fixed alignments/buttons/spacings, added counter for badges, and deleted some unnecessary classes to keep things DRY

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -36,6 +36,11 @@
   transform: translateY(2px);
 }
 
+.btn-main-red:active {
+  box-shadow: 1px 2px rgba(0, 0, 0, 0.5);
+  transform: translateY(2px);
+}
+
 .btn-main-wrapper {
   min-height: 55px;
   min-width: 95%;
@@ -94,6 +99,7 @@ label, button {
 
 .btn-main h3,
 .btn-main a {
+  text-decoration: none;
   z-index: 0;
   font-weight: bold;
   color: white;
