--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -44,7 +44,9 @@ a.tab:hover {
   // border-right: 1px solid black;
 }
 
-
+.padding-bottom {
+  padding-bottom: 50px;
+}
 // footer {
 //   position: relative;
 //   flex-shrink: 0;
