--- a/app/assets/stylesheets/pages/_badge.scss
+++ b/app/assets/stylesheets/pages/_badge.scss
@@ -7,3 +7,7 @@
   top: 10px;
   right: 20px;
 }
+
+.avatar-border {
+  border: 3px solid green;
+}
